# route_converter

./: .gitignore  CMakeLists.txt
config/: cmake_defines.h.in
include/: application.h  defines.h  geometry_reference.h  mesh_reference.h  my_math.h  node_reference.h  object_reference.h  transformation_reference.h
include/gltf_types/: accessor.h  asset.h  buffer.h  bufferView.h  image.h  material.h  mesh.h  node.h  sampler.h  scene.h  texture.h
src/: application.c  geometry_reference.c  main.c  my_math.c
src/gltf_types/: scene.c
